# contacts-api

./: .dockerignore  .env.template  .sconsign.dblite  Dockerfile  README.md  SConstruct  pyproject.toml
app/: manage.py
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/contacts/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
app/contacts/migrations/: 0001_initial.py
app/contacts/tests/: conftest.py  contacts_factory.py  test_api.py
app/middlewares/: region_restriction.py
app/oauth2/: admin.py  apps.py  models.py  permissions.py  urls.py  views.py
app/oauth2/migrations/: 0001_initial.py
app/oauth2/tests/: test_api.py
docker_compose/: app.yaml
